# TheEarl

./: Cargo.toml  Dockerfile
src/: bot.rs  main.rs
src/bot/: commands.rs  mod.rs
