[package]
name = "Accoutrement-RS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }

[dependencies.songbird]
version = "0.3.0"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "model", "rustls_backend", "standard_framework", "cache"]
