[package]
name = "the_earl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
lazy_static = "*"

[dependencies.songbird]
version = "*"
features = ["builtin-queue"]

[dependencies.serenity]
version = "*"
default-features = false
features = ["client", "gateway", "model", "rustls_backend", "standard_framework", "cache"]
